--- a/source/_posts/2024.10.06.AI.md
+++ b/source/_posts/2024.10.06.AI.md
@@ -30,6 +30,10 @@ copyright_url:
       link: https://tongyi.aliyun.com/qianwen/
       avatar: https://img.alicdn.com/imgextra/i1/O1CN01asLYeX1WhbsyEZn5u_!!6000000002820-55-tps-56-56.svg
       descr: 阿里云自主研发的大语言模型
+    - name: 智谱清言
+      link: https://chatglm.cn/main/alltoolsdetail?lang=zh
+      avatar: https://chatglm.cn/img/icons/apple-touch-icon-152x152.png
+      descr: 智谱AI公司开发的人工智能助手ChatGLM
 - class_name:  导航
   link_list:
     - name: AI导航站
