--- a/source/_posts/2024.10.18.安装包.md
+++ b/source/_posts/2024.10.18.安装包.md
@@ -22,35 +22,51 @@ copyright_url:
 {% flink %}
 - class_name:  效率
   link_list:
-    - name: PixPin
-      link: https://pixpinapp.com/
-      avatar: https://pixpinapp.com/logo.png
-      descr: 截图/贴图工具
     - name: Quicker
       link: https://getquicker.net/Download
       avatar: https://getquicker.net/quicker_round.png
       descr: 指尖工具箱
-    - name: Ditto
-      link: https://ditto-cp.sourceforge.io/
-      avatar: https://ditto-cp.sourceforge.io/Ditto2.png
-      descr: 剪贴板历史记录管理
+    - name: uTools
+      link: https://u.tools/download/
+      avatar: https://res.u-tools.cn/website5/static/assets/logo.png
+      descr: 个人效率助理
     - name: PowerToys
       link: https://github.com/microsoft/PowerToys/releases
       avatar: https://learn.microsoft.com/windows/images/windows11.svg
       descr: 一组实用工具
+    - name: PixPin
+      link: https://pixpinapp.com/
+      avatar: https://pixpinapp.com/logo.png
+      descr: 截图/贴图工具
+    - name: Ditto
+      link: https://ditto-cp.sourceforge.io/
+      avatar: https://ditto-cp.sourceforge.io/Ditto2.png
+      descr: 剪贴板历史记录管理
+    - name: AquaSnap
+      link: https://www.nurgo-software.com/pricing/aquasnap
+      avatar: https://www.nurgo-software.com/apple-touch-icon.png
+      descr: tiling window manager
 - class_name:  资源管理
   link_list:
     - name: Everything
       link: https://www.voidtools.com/zh-cn/
       avatar: https://www.voidtools.com/favicon.ico
       descr: 快速定位文件和文件夹
+    - name: 7-Zip
+      link: https://7-zip.org/
+      avatar: https://7-zip.org/7ziplogo.png
+      descr: a file archiver with a high compression ratio.
     - name: 微力同步
       link: https://www.verysync.com/
       avatar: https://www.verysync.com/static/images/sync-job.svg
       descr: 多平台文件同步软件
+    - name: 坚果云
+      link: https://www.jianguoyun.com/s/downloads
+      avatar: https://www.jianguoyun.com/static/images/logo.png
+      descr: 网盘下载|云盘下载|免费网盘云盘试用
     - name: Geek Uninstaller
       link: https://geekuninstaller.com/download
-      avatar: https://www.verysync.com/static/images/sync-job.svg
+      avatar: https://geekuninstaller.com/favicon.ico
       descr: 软件彻底卸载工具
 - class_name:  文档
   link_list:
@@ -62,16 +78,72 @@ copyright_url:
       link: https://www.emeditor.com/
       avatar: https://www.emeditor.com/wp-content/uploads/2024/09/icon.png
       descr: 最快的 Windows 文本编辑器
+    - name: Obsidian
+      link: https://obsidian.md/
+      avatar: https://obsidian.md/images/obsidian-logo-gradient.svg
+      descr: Sharpen your thinking
+    - name: File Converter
+      link: https://file-converter.io/
+      avatar: https://file-converter.io/images/application-icon.png
+      descr: Convert & compress everything in 2 clicks
+- class_name:  下载
+  link_list:
+    - name: Neat Download Manager
+      link: https://www.neatdownloadmanager.com/index.php/en/
+      avatar: https://res.wx.qq.com/a/wx_fed/assets/res/NTI4MWU5.ico
+      descr: Free Internet Download Manager Mac & Windows
+- class_name:  媒体
+  link_list:
+    - name: Potplayer
+      link: https://potplayer.daum.net/?lang=zh_CN
+      avatar: https://m1.daumcdn.net/icon/w/c/13/11/42095036704489703.png
+      descr: multimedia player
+    - name: ScreenToGif
+      link: https://www.screentogif.com/
+      avatar: https://www.screentogif.com/img/logo.d2151712.png
+      descr: Screen webcam and sketchboard recorder with an integrated editor
+    - name: Listen 1
+      link: https://listen1.github.io/listen1/
+      avatar: https://avatars.githubusercontent.com/u/18599108?v=4&size=40
+      descr: 音乐播放器
+- class_name:  通讯
+  link_list:
+    - name: 微信
+      link: https://weixin.qq.com/
+      avatar: https://res.wx.qq.com/a/wx_fed/assets/res/NTI4MWU5.ico
+      descr: 一个生活方式
 - class_name:  工具
   link_list:
+    - name: ToDesk远程桌面软件
+      link: https://www.todesk.com/download.html
+      avatar: https://www.todesk.com/dist/img/d6947e1.svg
+      descr: 免费安全流畅的远程连接电脑手机
+    - name: AnLink
+      link: https://cn.anlinksoft.com/download/
+      avatar: https://cn.anlinksoft.com/res/logo/logo.png
+      descr: 在PC上操作手机
     - name: Rufus
       link: https://rufus.ie/zh/
       avatar: https://rufus.ie/pics/rufus-128.png
       descr: 创建 USB 启动盘的辅助工具
 - class_name:  开发
   link_list:
+    - name: Git
+      link: https://git-scm.com/downloads
+      avatar: https://git-scm.com/images/logo@2x.png
+      descr: a free and open source distributed version control system
+    - name: Node.js
+      link: https://nodejs.org/zh-cn/download/prebuilt-installer
+      avatar: https://nodejs.org/static/images/logo-hexagon-card.png
+      descr: 在任何地方运行 JavaScript
     - name: Docker
       link: https://docs.docker.com/desktop/release-notes/
       avatar: https://docs.docker.com/favicons/docs@2x.ico
       descr: 开源的应用容器引擎
+- class_name:  系统
+  link_list:
+    - name: .NetFramework 4.7.2
+      link: https://support.microsoft.com/en-us/topic/microsoft-net-framework-4-7-2-offline-installer-for-windows-05a72734-2127-a15d-50cf-daf56d5faec2
+      avatar: https://t3.gstatic.cn/faviconV2?client=SOCIAL&type=FAVICON&fallback_opts=TYPE,SIZE,URL&size=128&url=https://support.microsoft.com/en-us/topic/microsoft-net-framework-4-7-2-offline-installer-for-windows-05a72734-2127-a15d-50cf-daf56d5faec2
+      descr: a highly compatible, in-place update to .NET Framework 4
 {% endflink %}
